[gd_scene load_steps=32 format=2]

[ext_resource path="res://ASSETS_SWING/Goblin/Goblin_fullsheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Goblin.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 16 )

[sub_resource type="Animation" id=2]
resource_name = "Die"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Goblin_fullsheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Goblin_fullsheet:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -26, 0 ), Vector2( -35, 0 ), Vector2( -38, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Dodge"
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Goblin_fullsheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.08, 0.16, 0.2, 0.24, 0.28, 0.32, 0.36 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 12, 13, 14, 15, 16, 17, 18, 19 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Goblin_fullsheet:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.08 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -10 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitBox/DodgeAttack:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.32, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:SPEED")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.16 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ -200, 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Hurt"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Goblin_fullsheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 73, 74, 75 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:SPEED")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ -60 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Goblin_fullsheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50, 51 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Goblin_fullsheet:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:SPEED")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Run"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Goblin_fullsheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 60, 61, 62, 63, 64, 65, 66, 67 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:SPEED")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 50 ]
}

[sub_resource type="Animation" id=7]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Goblin_fullsheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitBox/StandAttack:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:SPEED")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 24, 14 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 17, 12 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 12, 16 )

[sub_resource type="CircleShape2D" id=11]

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "Die"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "Dodge"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "Hurt"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "Run"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "StandAttack"

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=27]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachine" id=28]
states/Die/node = SubResource( 12 )
states/Die/position = Vector2( 284.63, 353.666 )
states/Dodge/node = SubResource( 13 )
states/Dodge/position = Vector2( 558.259, 39 )
states/Hurt/node = SubResource( 14 )
states/Hurt/position = Vector2( 283, 208.333 )
states/Idle/node = SubResource( 15 )
states/Idle/position = Vector2( 282.556, 66.5555 )
states/Run/node = SubResource( 16 )
states/Run/position = Vector2( 585.036, 179 )
states/StandAttack/node = SubResource( 17 )
states/StandAttack/position = Vector2( 491.625, 307 )
transitions = [ "Idle", "Dodge", SubResource( 18 ), "Dodge", "Run", SubResource( 19 ), "Run", "StandAttack", SubResource( 20 ), "Run", "Hurt", SubResource( 21 ), "Dodge", "Hurt", SubResource( 22 ), "StandAttack", "Hurt", SubResource( 23 ), "Idle", "Hurt", SubResource( 24 ), "Hurt", "Idle", SubResource( 26 ), "StandAttack", "Idle", SubResource( 27 ), "Hurt", "Die", SubResource( 30 ) ]
start_node = "Idle"
end_node = "Die"

[sub_resource type="AnimationNodeStateMachinePlayback" id=29]

[node name="Goblin" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource( 2 )

[node name="Goblin_fullsheet" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 12
vframes = 7
frame = 48

[node name="hurtBox" type="CollisionShape2D" parent="."]
position = Vector2( -2, 10 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Die = SubResource( 2 )
anims/Dodge = SubResource( 3 )
anims/Hurt = SubResource( 4 )
anims/Idle = SubResource( 5 )
anims/Run = SubResource( 6 )
anims/StandAttack = SubResource( 7 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="DodgeAttack" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 44, 10 )
shape = SubResource( 8 )
disabled = true

[node name="StandAttack" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 27, 13 )
shape = SubResource( 9 )
disabled = true

[node name="BodyHurtBox" type="CollisionShape2D" parent="HitBox"]
position = Vector2( -2, 10 )
shape = SubResource( 10 )

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 128

[node name="DetectionZone" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2( 33, 15 )
shape = SubResource( 11 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 28 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 29 )

[node name="DeadAwait" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="timeout" from="DeadAwait" to="." method="_on_DeadAwait_timeout"]
